Update about to fix Edge layout issue

--- a/src/components/sections/About/About.css
+++ b/src/components/sections/About/About.css
@@ -14,7 +14,7 @@
 
 .about__text {
   width: 100%;
-  padding: 16px;
+  padding: 32px;
 }
 
 .about__title{
@@ -71,7 +71,6 @@
 
 .about__image {
   object-fit: contain;
-  padding: 16px;
   width: 100%;
 }
 
